// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatasetsPage Should match existing snapshot when given a dataset. 1`] = `
<Grid
  centered={true}
  padded={true}
  relaxed={true}
>
  <GridRow
    columns={3}
  >
    <GridColumn
      textAlign="left"
    >
      <Header />
      <GridRow />
    </GridColumn>
  </GridRow>
  <Divider
    section={true}
  />
</Grid>
`;

exports[`DatasetsPage Should match existing snapshot when hooked up to a Redux store. 1`] = `
<Connect(UnconnectedDatasetsPage)>
  <UnconnectedDatasetsPage
    datasets={Array []}
    dispatch={[Function]}
    visualizations={Array []}
  >
    <Grid
      centered={true}
      padded={true}
      relaxed={true}
    >
      <div
        className="ui centered padded relaxed grid"
      />
    </Grid>
  </UnconnectedDatasetsPage>
</Connect(UnconnectedDatasetsPage)>
`;

exports[`DatasetsPage Should match existing snapshot when no props are provided. 1`] = `
<Grid
  centered={true}
  padded={true}
  relaxed={true}
/>
`;

exports[`DatasetsPage Should render dynamics links correctly. 1`] = `
<Grid
  centered={true}
  padded={true}
  relaxed={true}
>
  <GridRow
    columns={3}
  >
    <GridColumn
      textAlign="left"
    >
      <Header />
      <GridRow>
        <Button
          as="button"
          basic={true}
          key="launch-button-for-down-the-road..."
        >
          <Link
            to="/dynamics?id=some-kind-of-musical-reference&analysis=down-the-road...&viz=bbfacade-0000-0000-0001-a1234567890b&viz=bbfacade-0000-0000-0004-a1234567890b"
          >
            Launch 'Eyes Wide'
          </Link>
        </Button>
        <Button
          as="button"
          basic={true}
          key="launch-button-for-and-back-again..."
        >
          <Link
            to="/dynamics?id=some-kind-of-musical-reference&analysis=and-back-again..."
          >
            Launch 'Tongue Tied'
          </Link>
        </Button>
      </GridRow>
    </GridColumn>
  </GridRow>
  <Divider
    section={true}
  />
</Grid>
`;
